--- a/class2/index.html
+++ b/class2/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <ul>
+        <li>클릭하세요.</li>
         <li><a href="/01/01.html">HTML CSS 복습</a></li>
         <li><a href="/02/02.html">HTML CSS 복습2</a></li>
     </ul>
