--- a/class2/01/01.html
+++ b/class2/01/01.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML CSS 복습</title>
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/NanumBarunGothicYetHangul.css" rel="stylesheet">
 
 </head>
 <!-- html만 제출하는줄 알고 css에 작성하지 않고 여기에 스타일 작성하였습니다. -->
