--- a/class2/03/03.html
+++ b/class2/03/03.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,25 +12,30 @@
     <!-- 자바스크립트 외부 파일 -->
     <script src="./03.js"></script>
     <title>K-Digital 6기</title>
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/NanumBarunGothicYetHangul.css" rel="stylesheet">
 </head>
 <body>
     <main>
         <header>
             <h1>K-digital 6기 자바스크립트</h1>
             <div>
-                홈
+                <a href="../index.html">
+                    🏠
+                </a>
+                
             </div>
         </header>
         
         <section>
             <h1>자바스크립트 함수 이해하기</h1>
-            <div id="btArea">
+            <div id="btArea" class="btGroup">
                 <button onclick="handleClick(1)">버튼1</button>
                 <button onclick="handleClick(2)">버튼2</button>
             </div>
             <div id="msgArea">
                 메세지
             </div>
+            <div id="btArea2" class="btGroup"></div>
         </section>
         <!-- 자바스크립트 위치2 -->
         <!-- <script>
