--- a/class2/index.html
+++ b/class2/index.html
@@ -10,7 +10,7 @@
     <main>
         <header>
             
-            <h1 style="padding: 30%;">K-digital 6기 자바스크립트</h1>
+            <h1>K-digital 6기 자바스크립트</h1>
             
             <div>
                 🏠
@@ -25,6 +25,8 @@
                     <li><a href="./03/03.html">03. 자바스크립트 시작하기</a></li>
                     <li><a href="./04/04.html">04. 자바스크립트 주사위</a></li>
                     <li><a href="./05/05.html">05. 자바스크립트 주사위2</a></li>
+                    <li><a href="./06/06_1.html">06. 자바스크립트 주사위 게임</a></li>
+                    <li><a href="./07/07.html">07. 단위 환산</a></li>
                 </ul>
 
             </article>
