--- a/class2/index.html
+++ b/class2/index.html
@@ -27,6 +27,8 @@
                     <li><a href="./05/05.html">05. 자바스크립트 주사위2</a></li>
                     <li><a href="./06/06_1.html">06. 자바스크립트 주사위 게임</a></li>
                     <li><a href="./07/07.html">07. 단위 환산</a></li>
+                    <li><a href="./08/08.html">08. 업다운게임</a></li>
+                    <li><a href="./09/09.html">09. 문자열 배우기</a></li>
                 </ul>
 
             </article>
