--- a/class2/index.html
+++ b/class2/index.html
@@ -29,6 +29,7 @@
                     <li><a href="./07/07.html">07. 단위 환산</a></li>
                     <li><a href="./08/08.html">08. 업다운게임</a></li>
                     <li><a href="./09/09.html">09. 문자열 배우기</a></li>
+                    <li><a href="./10/10.html">10. 로또번호 생성기</a></li>
                 </ul>
 
             </article>
